[package]
authors = ["Daniel Egger <daniel@eggers-club.de>"]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
description = "A platform agnostic driver to interface with the I2C based TI INA260 power monitor"
documentation = "https://docs.rs/ina260"
keywords = [
    "embedded-hal-driver",
    "powermonitor",
]
license = "0BSD"
name = "ina260"
readme = "README.md"
repository = "https://github.com/therealprof/ina260"
version = "0.4.0"
edition = "2021"

[dependencies]
defmt = { version = "0.3", optional = true }
embedded-hal = { version = "1.0", optional = true }
embedded-hal-async = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }
maybe-async-cfg = "0.2"

[features]
async = ["dep:embedded-hal-async"]
default = ["async"]
defmt-03 = ["dep:defmt"]
sync = ["dep:embedded-hal"]
